// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active ticket form renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <div
    style="display: block;"
  >
    <div>
      <form
        class="form "
        novalidate=""
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <h1
                class="c3 c4"
                data-testid="widget-title"
              >
                message
              </h1>
              <button
                aria-label="Minimize widget"
                class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
                data-garden-container-id="keyboardfocus"
                data-garden-container-version="0.2.6"
                data-garden-id="buttons.icon_button"
                data-garden-version="7.0.2"
                tabindex="0"
                type="button"
              >
                <svg
                  class="index__c-btn__icon___3V0Rl"
                  data-garden-id="buttons.icon"
                  data-garden-version="7.0.2"
                  data-testid="Icon--dash"
                  realfilename="dash-fill.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="c7"
            data-testid="scroll-container-content"
          >
            <div
              class="formWrapper"
            >
              <h2
                class="ticketFormTitle "
              >
                Ticket Forms
              </h2>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-9--input"
                  id="garden-field-container-9--label"
                >
                  <strong>
                    Your name
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-9--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-9--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="name-field"
                  id="garden-field-container-9--input"
                  name="name"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-10--input"
                  id="garden-field-container-10--label"
                >
                  <strong>
                    Email address
                  </strong>
                </label>
                <input
                  aria-describedby="garden-field-container-10--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-10--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="email-field"
                  id="garden-field-container-10--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                  required=""
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  data-keyid="1"
                  for="garden-field-container-11--input"
                  id="garden-field-container-11--label"
                >
                  <strong>
                    Description
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-11--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-11--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  id="garden-field-container-11--input"
                  name="1"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  data-keyid="2"
                  for="garden-field-container-12--input"
                  id="garden-field-container-12--label"
                >
                  <strong>
                    Subject
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-12--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-12--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  id="garden-field-container-12--input"
                  name="2"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  data-keyid="5"
                  for="garden-field-container-13--input"
                  id="garden-field-container-13--label"
                >
                  <strong>
                    Favorite Pizza
                  </strong>
                </label>
                <input
                  aria-describedby="garden-field-container-13--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-13--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  id="garden-field-container-13--input"
                  name="5"
                  required=""
                  value=""
                />
              </div>
              <span />
            </div>
          </div>
          <footer
            class="c8"
          >
            <div
              class="c9"
            >
              <a
                class="icon"
                data-testid="Icon--zendesk"
                href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
                tabindex="-1"
                target="_blank"
              >
                <svg
                  realfilename="widget-icon_zendesk.svg"
                  title="zendesk"
                />
              </a>
              <button
                class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
                data-garden-container-id="keyboardfocus"
                data-garden-container-version="0.2.6"
                data-garden-id="buttons.button"
                data-garden-version="7.0.2"
                data-testid="button-ok"
                tabindex="0"
                type="submit"
              >
                Send
              </button>
            </div>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`active ticket form renders the expected components in mobile form 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -51,5 +51,5 @@
              >
                <h2
-                 class="ticketFormTitle "
+                 class="ticketFormTitle ticketFormTitleMobile"
                >
                  Ticket Forms
@@ -64,6 +64,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.0.2"
-                   for="garden-field-container-19--input"
-                   id="garden-field-container-19--label"
+                   for="garden-field-container-14--input"
+                   id="garden-field-container-14--label"
                  >
                    <strong>
@@ -73,12 +73,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-19--hint"
+                   aria-describedby="garden-field-container-14--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-19--label"
+                   aria-labelledby="garden-field-container-14--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
                    data-testid="name-field"
-                   id="garden-field-container-19--input"
+                   id="garden-field-container-14--input"
                    name="name"
                    value=""
@@ -94,6 +94,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.0.2"
-                   for="garden-field-container-20--input"
-                   id="garden-field-container-20--label"
+                   for="garden-field-container-15--input"
+                   id="garden-field-container-15--label"
                  >
                    <strong>
@@ -102,12 +102,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-20--hint"
+                   aria-describedby="garden-field-container-15--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-20--label"
+                   aria-labelledby="garden-field-container-15--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
                    data-testid="email-field"
-                   id="garden-field-container-20--input"
+                   id="garden-field-container-15--input"
                    name="email"
                    pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -126,6 +126,6 @@
                    data-garden-version="7.0.2"
                    data-keyid="1"
-                   for="garden-field-container-21--input"
-                   id="garden-field-container-21--label"
+                   for="garden-field-container-16--input"
+                   id="garden-field-container-16--label"
                  >
                    <strong>
@@ -135,11 +135,11 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-21--hint"
+                   aria-describedby="garden-field-container-16--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-21--label"
+                   aria-labelledby="garden-field-container-16--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
-                   id="garden-field-container-21--input"
+                   id="garden-field-container-16--input"
                    name="1"
                    value=""
@@ -156,6 +156,6 @@
                    data-garden-version="7.0.2"
                    data-keyid="2"
-                   for="garden-field-container-22--input"
-                   id="garden-field-container-22--label"
+                   for="garden-field-container-17--input"
+                   id="garden-field-container-17--label"
                  >
                    <strong>
@@ -165,11 +165,11 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-22--hint"
+                   aria-describedby="garden-field-container-17--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-22--label"
+                   aria-labelledby="garden-field-container-17--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
-                   id="garden-field-container-22--input"
+                   id="garden-field-container-17--input"
                    name="2"
                    value=""
@@ -186,6 +186,6 @@
                    data-garden-version="7.0.2"
                    data-keyid="5"
-                   for="garden-field-container-23--input"
-                   id="garden-field-container-23--label"
+                   for="garden-field-container-18--input"
+                   id="garden-field-container-18--label"
                  >
                    <strong>
@@ -194,11 +194,11 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-23--hint"
+                   aria-describedby="garden-field-container-18--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-23--label"
+                   aria-labelledby="garden-field-container-18--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
-                   id="garden-field-container-23--input"
+                   id="garden-field-container-18--input"
                    name="5"
                    required=""
`;

exports[`renders the expected components 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div>
  <div
    style="display: block;"
  >
    <div>
      <form
        class="form "
        novalidate=""
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
            >
              <h1
                class="c3 c4"
                data-testid="widget-title"
              >
                message
              </h1>
              <button
                aria-label="Minimize widget"
                class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
                data-garden-container-id="keyboardfocus"
                data-garden-container-version="0.2.6"
                data-garden-id="buttons.icon_button"
                data-garden-version="7.0.2"
                tabindex="0"
                type="button"
              >
                <svg
                  class="index__c-btn__icon___3V0Rl"
                  data-garden-id="buttons.icon"
                  data-garden-version="7.0.2"
                  data-testid="Icon--dash"
                  realfilename="dash-fill.svg"
                />
              </button>
            </div>
          </div>
          <div
            class="c7"
            data-testid="scroll-container-content"
          >
            <div
              class="formWrapper"
            >
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-0--input"
                  id="garden-field-container-0--label"
                >
                  <strong>
                    Your name
                  </strong>
                   (optional)
                </label>
                <input
                  aria-describedby="garden-field-container-0--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-0--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="name-field"
                  id="garden-field-container-0--input"
                  name="name"
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-1--input"
                  id="garden-field-container-1--label"
                >
                  <strong>
                    Email address
                  </strong>
                </label>
                <input
                  aria-describedby="garden-field-container-1--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-1--label"
                  class="text__c-txt__input___38pRd "
                  data-garden-id="forms.input"
                  data-garden-version="7.0.2"
                  data-testid="email-field"
                  id="garden-field-container-1--input"
                  name="email"
                  pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                  required=""
                  value=""
                />
              </div>
              <div
                class="text__c-txt___Uzv-G range__c-range___1aYaS "
              >
                <label
                  class="text__c-txt__label___3wMPZ "
                  data-garden-container-id="field"
                  data-garden-container-version="1.1.3"
                  data-garden-id="forms.text_label"
                  data-garden-version="7.0.2"
                  for="garden-field-container-2--input"
                  id="garden-field-container-2--label"
                >
                  <strong>
                    How can we help you?
                  </strong>
                </label>
                <textarea
                  aria-describedby="garden-field-container-2--hint"
                  aria-invalid="false"
                  aria-labelledby="garden-field-container-2--label"
                  class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                  data-garden-id="forms.textarea"
                  data-garden-version="7.0.2"
                  data-testid="message-field"
                  id="garden-field-container-2--input"
                  name="description"
                  required=""
                  rows="5"
                />
              </div>
              <span />
            </div>
          </div>
          <footer
            class="c8"
          >
            <div
              class="c9"
            >
              <a
                class="icon"
                data-testid="Icon--zendesk"
                href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
                tabindex="-1"
                target="_blank"
              >
                <svg
                  realfilename="widget-icon_zendesk.svg"
                  title="zendesk"
                />
              </a>
              <button
                class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
                data-garden-container-id="keyboardfocus"
                data-garden-container-version="0.2.6"
                data-garden-id="buttons.button"
                data-garden-version="7.0.2"
                data-testid="button-ok"
                tabindex="0"
                type="submit"
              >
                Send
              </button>
            </div>
          </footer>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`renders the expected components in mobile mode 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -59,6 +59,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.0.2"
-                   for="garden-field-container-6--input"
-                   id="garden-field-container-6--label"
+                   for="garden-field-container-3--input"
+                   id="garden-field-container-3--label"
                  >
                    <strong>
@@ -68,12 +68,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-6--hint"
+                   aria-describedby="garden-field-container-3--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-6--label"
+                   aria-labelledby="garden-field-container-3--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
                    data-testid="name-field"
-                   id="garden-field-container-6--input"
+                   id="garden-field-container-3--input"
                    name="name"
                    value=""
@@ -89,6 +89,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.0.2"
-                   for="garden-field-container-7--input"
-                   id="garden-field-container-7--label"
+                   for="garden-field-container-4--input"
+                   id="garden-field-container-4--label"
                  >
                    <strong>
@@ -97,12 +97,12 @@
                  </label>
                  <input
-                   aria-describedby="garden-field-container-7--hint"
+                   aria-describedby="garden-field-container-4--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-7--label"
+                   aria-labelledby="garden-field-container-4--label"
                    class="StyledTextInput-sc-1ezxcjx-0 text__c-txt__input___38pRd icTNBi"
                    data-garden-id="forms.input"
                    data-garden-version="7.0.2"
                    data-testid="email-field"
-                   id="garden-field-container-7--input"
+                   id="garden-field-container-4--input"
                    name="email"
                    pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
@@ -120,6 +120,6 @@
                    data-garden-id="forms.text_label"
                    data-garden-version="7.0.2"
-                   for="garden-field-container-8--input"
-                   id="garden-field-container-8--label"
+                   for="garden-field-container-5--input"
+                   id="garden-field-container-5--label"
                  >
                    <strong>
@@ -128,12 +128,12 @@
                  </label>
                  <textarea
-                   aria-describedby="garden-field-container-8--hint"
+                   aria-describedby="garden-field-container-5--hint"
                    aria-invalid="false"
-                   aria-labelledby="garden-field-container-8--label"
+                   aria-labelledby="garden-field-container-5--label"
                    class="StyledTextInput-sc-1ezxcjx-0-textarea StyledTextarea-p4bofl-0 text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 ffjHNh"
                    data-garden-id="forms.textarea"
                    data-garden-version="7.0.2"
                    data-testid="message-field"
-                   id="garden-field-container-8--input"
+                   id="garden-field-container-5--input"
                    name="description"
                    required=""
`;

exports[`renders the loading bar content 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  overflow: hidden;
}

.c1 {
  border-radius: 0.5714285714285714rem 0.5714285714285714rem 0 0;
  padding: 0.5714285714285714rem 1rem;
  background: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c2 .c5 {
  width: 2rem !important;
  height: 2rem !important;
}

.c6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c6 svg,
.c6 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c6:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c6:hover {
  background: #227EC9 !important;
}

.c7 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c7::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c7::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c7::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c8 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

<div
  style="display: block;"
>
  <div>
    <form
      class="form "
      novalidate=""
    >
      <div
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <h1
              class="c3 c4"
              data-testid="widget-title"
            >
              message
            </h1>
            <button
              aria-label="Minimize widget"
              class="c5 index__c-btn--icon___1Yl4x c6 index__c-btn___3y2Qe index__c-btn--basic___38OO7 index__c-btn--muted___ze6U0 index__c-btn--sm___3Kuhv "
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.icon_button"
              data-garden-version="7.0.2"
              tabindex="0"
              type="button"
            >
              <svg
                class="index__c-btn__icon___3V0Rl"
                data-garden-id="buttons.icon"
                data-garden-version="7.0.2"
                data-testid="Icon--dash"
                realfilename="dash-fill.svg"
              />
            </button>
          </div>
        </div>
        <div
          class="c7"
          data-testid="scroll-container-content"
        >
          <div
            class="formWrapper"
          >
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-27--input"
                id="garden-field-container-27--label"
              >
                <strong>
                  Your name
                </strong>
                 (optional)
              </label>
              <input
                aria-describedby="garden-field-container-27--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-27--label"
                class="text__c-txt__input___38pRd "
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="name-field"
                id="garden-field-container-27--input"
                name="name"
                value=""
              />
            </div>
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-28--input"
                id="garden-field-container-28--label"
              >
                <strong>
                  Email address
                </strong>
              </label>
              <input
                aria-describedby="garden-field-container-28--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-28--label"
                class="text__c-txt__input___38pRd "
                data-garden-id="forms.input"
                data-garden-version="7.0.2"
                data-testid="email-field"
                id="garden-field-container-28--input"
                name="email"
                pattern="[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+(?:\\\\.[a-zA-Z0-9!#$%&'*+/=?^_\`{|}~\\\\-\`']+)*@(?:[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?\\\\.)+[a-zA-Z0-9](?:[a-zA-Z0-9-]*[a-zA-Z0-9])?"
                required=""
                value=""
              />
            </div>
            <div
              class="text__c-txt___Uzv-G range__c-range___1aYaS "
            >
              <label
                class="text__c-txt__label___3wMPZ "
                data-garden-container-id="field"
                data-garden-container-version="1.1.3"
                data-garden-id="forms.text_label"
                data-garden-version="7.0.2"
                for="garden-field-container-29--input"
                id="garden-field-container-29--label"
              >
                <strong>
                  How can we help you?
                </strong>
              </label>
              <textarea
                aria-describedby="garden-field-container-29--hint"
                aria-invalid="false"
                aria-labelledby="garden-field-container-29--label"
                class="-textarea text__c-txt__input___38pRd text__c-txt__input--area___9Qxj1 "
                data-garden-id="forms.textarea"
                data-garden-version="7.0.2"
                data-testid="message-field"
                id="garden-field-container-29--input"
                name="description"
                required=""
                rows="5"
              />
            </div>
            <span />
          </div>
        </div>
        <footer
          class="c8"
        >
          <div
            class="c9"
          >
            <a
              class="icon"
              data-testid="Icon--zendesk"
              href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
              tabindex="-1"
              target="_blank"
            >
              <svg
                realfilename="widget-icon_zendesk.svg"
                title="zendesk"
              />
            </a>
            <button
              class="button index__c-btn___3y2Qe index__c-btn--primary___1YOfW "
              data-garden-container-id="keyboardfocus"
              data-garden-container-version="0.2.6"
              data-garden-id="buttons.button"
              data-garden-version="7.0.2"
              data-testid="button-ok"
              tabindex="0"
              type="submit"
            >
              Send
            </button>
          </div>
        </footer>
      </div>
    </form>
  </div>
</div>
`;
